# L2G

./: L2G_V01.ipynb  README.md  colab_l2g_backend.ipynb  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements-api.txt
backend/app/: __init__.py  config.py  main.py
backend/app/routers/: data.py
backend/app/schemas/: models.py
backend/app/services/: dataset_io.py  label_comparison.py  pipeline_runner.py  training_runner.py
backend/tests/: test_ner_bent.py
bent_service/: Dockerfile  main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/pages/: HomePage.tsx  ProjectWorkspace.tsx
l2g_core/: __init__.py  devices.py  metrics.py  ner.py  normalization.py  pipeline.py  relevance.py  schemas.py  text_cleaning.py
scripts/: colab_smoke_check.py  ensure_storage_paths.sh  ssl_manage.sh
